FIXME libselinux: use running kernel policy by default FIXME
SELinux semanage tools that query SELinux policy should be using the
policy that is loaded into the kernel, rather then the policy on disk.
Since they may be different.  The -p option should be available to most
utilities to look at other policy stores.  This should transperently
fallback to the policy on disk if the in kernel policy is unavailable.

[audit2why does not fall back?  depends on binary policy path shit]

Signed-off-by: Eric Paris <eparis@redhat.com>
Acked-by: Dan Walsh <dwalsh@redhat.com>

--- a/libselinux/man/man3/selinux_binary_policy_path.3
+++ b/libselinux/man/man3/selinux_binary_policy_path.3
@@ -17,6 +17,8 @@ directories and files
 .sp
 .B const char *selinux_binary_policy_path(void);
 .sp
+.B const char *selinux_current_policy_path(void);
+.sp
 .B const char *selinux_failsafe_context_path(void);
 .sp
 .B const char *selinux_removable_context_path(void);
@@ -52,8 +54,11 @@ returns the top-level SELinux configuration directory.
 .BR selinux_policy_root ()
 returns the top-level policy directory.
 .sp
+.BR selinux_current_policy_path()
+returns the binary policy file loaded into the kernel
+.sp
 .BR selinux_binary_policy_path ()
-returns the binary policy file loaded into kernel.
+returns the binary policy file on disk
 .sp
 .BR selinux_default_type_path ()
 returns the context file mapping roles to default types.
